# status-beacon-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .quorum.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit-autoupdate.yml  quorum-review.yml
alembic/: env.py  script.py.mako
alembic/versions/: dc218973530a_create_initial_tables.py
scripts/: seed_services.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/v1/: router.py
src/api/v1/routes/: health.py
src/core/: __init__.py  config.py  database.py
src/models/: __init__.py  base.py  enums.py  incident.py  service.py  service_status.py
src/providers/: __init__.py
tests/: __init__.py  conftest.py
tests/api/: test_health.py
